# CPPIDE

./: CMakeLists.txt  coderunner.h  main.cpp  main.qml
.github/workflows/: windows-build.yml
